--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,18 @@
 {
-  'presets': [
-    'es2016',
-    'es2015',
-    'react',
-    'stage-3'
+  "presets": [
+    "es2016",
+    "es2015",
+    "react",
+    "stage-3"
   ],
-  'env': {
-    'test': {
-      'plugins': [
-        'istanbul'
+  "env": {
+    "test": {
+      "plugins": [
+        "istanbul"
         ]
     }
-  }
+  },
+  "plugins": [
+    "react-hot-loader/babel"
+  ]
 }
