--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knmi-react-redux-starter-kit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This package is the de facto basis for React web appliction development at the Royal Netherlands Meteorological Institute (KNMI)",
   "main": "index.js",
   "engines": {
@@ -9,54 +9,31 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "compile": "better-npm-run compile",
     "lint": "eslint bin build config server src",
     "lint:fix": "better-npm-run lint -- --fix",
     "start": "better-npm-run start",
-    "dev": "better-npm-run dev",
     "test": "better-npm-run test",
-    "test:dev": "better-npm-run test -- --watch",
-    "deploy": "better-npm-run deploy",
-    "deploy:dev": "better-npm-run deploy:dev",
-    "deploy:prod": "better-npm-run deploy:prod",
+    "compile:dev": "better-npm-run compile:dev",
+    "compile:prod": "better-npm-run compile:prod",
     "validate": "npm ls"
   },
   "betterScripts": {
-    "compile": {
-      "command": "node bin/compile",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "dev": {
-      "command": "nodemon bin/dev-server --ignore dist --ignore coverage --ignore tests --ignore src",
+    "compile:dev": {
+      "command": "npm run clean && webpack --mode development --config config/webpack.dev.config.js",
       "env": {
         "NODE_ENV": "development",
         "DEBUG": "app:*"
       }
     },
-    "deploy": {
-      "command": "npm run lint && npm run test && npm run clean && npm run compile",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "deploy:dev": {
-      "command": "npm run deploy",
-      "env": {
-        "NODE_ENV": "development",
-        "DEBUG": "app:*"
-      }
-    },
-    "deploy:prod": {
-      "command": "npm run deploy",
+    "compile:prod": {
+      "command": "npm run clean && webpack --mode production --config config/webpack.prod.config.js",
       "env": {
         "NODE_ENV": "production",
         "DEBUG": "app:*"
       }
     },
     "start": {
-      "command": "node bin/dev-server",
+      "command": "webpack-dev-server --port 3000 --mode development --config config/webpack.dev.config.js",
       "env": {
         "DEBUG": "app:*"
       }
@@ -76,90 +53,90 @@
   "author": "KNMI, based on work by David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "fs-extra": "^3.0.1",
-    "html-webpack-plugin": "^2.28.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "eslint-plugin-standard": "^3.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fs-extra": "^6.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "ip": "^1.1.5",
-    "react": "^15.5.4",
-    "react-transition-group": "^1.1.3",
-    "react-dom": "^15.5.4",
-    "react-redux": "^5.0.5",
-    "react-router": "^3.0.5",
-    "redux": "^3.6.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "^4.1.3",
-    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-istanbul": "^4.1.6",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babel-runtime": "^6.23.0",
-    "better-npm-run": "0.0.15",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "cheerio": "^0.22.0",
-    "compression": "^1.6.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.28.2",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "better-npm-run": "0.1.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "cheerio": "^1.0.0-rc.2",
+    "compression": "^1.7.2",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "debug": "^2.6.8",
-    "dirty-chai": "^1.2.2",
-    "enzyme": "^2.8.2",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.2.0",
+    "debug": "^3.1.0",
+    "dirty-chai": "^2.0.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard-react": "^6.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.0.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "express": "^4.15.3",
-    "file-loader": "^0.11.1",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "ignore-styles": "^5.0.1",
-    "imports-loader": "^0.7.1",
+    "imports-loader": "^0.8.0",
     "istanbul": "^1.1.0-alpha.1",
-    "jsdom": "^11.0.0",
+    "jsdom": "^11.10.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^3.4.1",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
-    "nyc": "^10.3.2",
-    "postcss-loader": "^2.0.5",
+    "mocha": "^5.1.1",
+    "node-sass": "^4.9.0",
+    "nodemon": "^1.17.3",
+    "nyc": "^11.7.1",
+    "postcss-loader": "^2.1.4",
     "precommit-hook": "^3.0.0",
-    "react-addons-test-utils": "^15.5.1",
-    "react-test-renderer": "^15.5.4",
-    "redbox-react": "^1.3.6",
-    "redux-devtools": "^3.4.0",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.5",
-    "sinon": "^2.3.1",
-    "sinon-chai": "^2.10.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-hot-loader": "^4.1.2",
+    "react-test-renderer": "^16.3.2",
+    "redbox-react": "^1.6.0",
+    "redux-devtools": "^3.4.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^7.0.1",
+    "sinon": "^5.0.3",
+    "sinon-chai": "^3.0.0",
     "strip-loader": "^0.1.2",
-    "style-loader": "^0.18.1",
+    "style-loader": "^0.21.0",
     "transform-runtime": "0.0.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.6.0",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "yargs": "^8.0.1"
-  },
-  "pre-commit": [
-    "lint",
-    "test"
-  ]
+    "url-loader": "^1.0.1",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.3",
+    "yargs": "^11.0.0"
+  }
 }
