--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,4 @@
 {
-  "ecmaVersion": 7,
   "parser": "babel-eslint",
   "extends": [
     "standard",
@@ -13,7 +12,8 @@
   ],
   "env": {
     "browser" : true,
-    "mocha"   : true
+    "mocha"   : true,
+    "es6": true
   },
   "globals": {
     "__DEV__"      : false,
@@ -32,5 +32,12 @@
     "jsx-quotes"           : [2, "prefer-single"],
     "max-len"              : [2, 200, 2],
     "object-curly-spacing" : [2, "always"]
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   }
 }
