--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knmi-react-redux-starter-kit",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "This package is the de facto basis for React web appliction development at the Royal Netherlands Meteorological Institute (KNMI)",
   "main": "index.js",
   "engines": {
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "lint": "eslint bin build config server src",
+    "lint": "eslint --ext .jsx --ext .js --ext .json .",
     "lint:fix": "better-npm-run lint -- --fix",
     "start": "better-npm-run start",
     "test": "better-npm-run test",
@@ -53,90 +53,90 @@
   "author": "KNMI, based on work by David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
-    "clean-webpack-plugin": "^0.1.19",
-    "eslint-plugin-standard": "^3.1.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "fs-extra": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "fs-extra": "^8.1.0",
     "ip": "^1.1.5",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.3.0",
-    "redux-thunk": "^2.2.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "^4.1.6",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "better-npm-run": "0.1.0",
-    "chai": "^4.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "better-npm-run": "0.1.1",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "cheerio": "^1.0.0-rc.2",
-    "compression": "^1.7.2",
-    "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "cssnano": "^3.10.0",
-    "debug": "^3.1.0",
+    "cheerio": "^1.0.0-rc.3",
+    "compression": "^1.7.4",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "debug": "^4.1.1",
     "dirty-chai": "^2.0.1",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "express": "^4.16.3",
-    "file-loader": "^1.1.11",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.3.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-react": "^9.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^1.4.0",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "ignore-styles": "^5.0.1",
     "imports-loader": "^0.8.0",
-    "istanbul": "^1.1.0-alpha.1",
-    "jsdom": "^11.10.0",
+    "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^5.1.1",
-    "node-sass": "^4.9.0",
-    "nodemon": "^1.17.3",
-    "nyc": "^11.7.1",
-    "postcss-loader": "^2.1.4",
+    "mocha": "^6.2.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.2",
+    "nyc": "^14.1.1",
+    "postcss-loader": "^3.0.0",
     "precommit-hook": "^3.0.0",
     "react-addons-test-utils": "^15.6.2",
-    "react-hot-loader": "^4.1.2",
-    "react-test-renderer": "^16.3.2",
+    "react-hot-loader": "^4.12.12",
+    "react-test-renderer": "^16.9.0",
     "redbox-react": "^1.6.0",
-    "redux-devtools": "^3.4.1",
+    "redux-devtools": "^3.5.0",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.1",
-    "sinon": "^5.0.3",
-    "sinon-chai": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "sinon": "^7.4.2",
+    "sinon-chai": "^3.3.0",
     "strip-loader": "^0.1.2",
-    "style-loader": "^0.21.0",
+    "style-loader": "^1.0.0",
     "transform-runtime": "0.0.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.3",
-    "yargs": "^11.0.0"
-  }
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0",
+    "yargs": "^14.0.0"
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
